css/style.css
body{
    background-color: #b6c5c2;
    height: 1000px;
    background-image: url("../images/passportstamps.jpg");
    background-size: cover;
    background-position: center;
}

header{
    background-color: #b6c5c2;
    height: 50px;
    text-align:center;
    font-size: 30px;
}

#main-container{
    height: 600px;
}

#form-field, #currency-field{
    display: flex;
    flex-direction: column;
    height: 300px;
    width: 300px;
    padding: 20px;
    justify-content: start;
}

#currency-field{
    height: 150px;
}
#currency-lbl, #ipt-lbl{
    font-size: 20px;
}

#ipt-lbl{
    margin-bottom: 25px;
}

#input-field, #currency-display{
    display: flex;
    flex-direction: column;
    height: 200px;
    justify-content: space-evenly;
}

#currency-display{
    border-style: solid;
    border-color: #b6c5c2;
    height: 100px;
}


#form-area, #results-container{
    background-color: rgba(130, 153, 168, .35);
    font-weight: bold;
}

#form-area{
    flex-direction: row;
    display: flex;
    justify-content: space-evenly;
}

#results-header-text{
    font-size: 25px;
    text-decoration: underline;
}

 #results{
    background-color: #8299a8;
    
}

input, button, select{
    margin-bottom: 10px;
}

#ipt-country{
    margin-top: 10px;
}

input, select, #submit-btn{
    font-size: 20px;
    text-align: center;
    padding: 5px,0,5px,0;
}

.label{
    color:white;
}


.modal{
    height: 300px;
    width: 400px;
    position: absolute;
    justify-content: space-between;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: #b6c5c2;
    border-radius: 20%;
}

#modal-OK{
    left: 140px;
    top: -10px;
}

#modal-title{
    left: 50px;
    bottom:200px;
}

